# latch

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: config.rs  jwt.rs  lifecycle.rs  main.rs  output.rs  page.html  server.rs  state.rs  update.rs
src/cmd/: check.rs  config.rs  mod.rs  passkeys.rs  service.rs  update.rs
