[package]
name        = "latch"
version     = "0.5.1"
edition     = "2021"
authors     = ["Terry Tsai"]
license     = "MIT"
description = "Single-user passkey-based auth for personal infrastructure"
repository  = "https://github.com/TerryTsai/latch"
readme      = "README.md"
keywords    = ["webauthn", "passkey", "auth", "homelab", "self-hosted"]
categories  = ["authentication", "web-programming::http-server"]

[dependencies]
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
tiny_http   = "0.12"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
toml        = { version = "0.8", default-features = false, features = ["parse"] }
# Listed so we can opt into vendoring OpenSSL via the `vendored` feature.
# Default build links system OpenSSL dynamically; release CI enables
# `vendored` together with the musl target for a fully static binary.
openssl     = "0.10"

[features]
default  = []
vendored = ["openssl/vendored"]

[profile.release]
opt-level     = "z"
lto           = "fat"
codegen-units = 1
strip         = "symbols"
panic         = "abort"
